[tool.poetry]
    name = "importsinjson"
    version = "0.1.1"
    description = "Adding import functionality to JSON files"
    license = "MIT"
    readme = "README.md"
    homepage = "https://github.com/NathanVaughn/importsinjson"
    repository = "https://github.com/NathanVaughn/importsinjson.git"
    authors = ["Nathan Vaughn <nvaughn51@gmail.com>"]
    classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Text Processing",
    ]

[tool.poetry.urls]
    Issues = "https://github.com/NathanVaughn/importsinjson/issues"

[tool.poetry.dependencies]
    python            = ">=3.7,<4.0"
    pyjson5           = { version = "^1.6.1", optional = true }
    commentjson       = { version = "^0.9.0", optional = true }

[tool.poetry.group.dev.dependencies]
    pytest     = "^7.2.0"
    pre-commit = "^2.21.0"

[tool.poetry.extras]
    pyjson5     = ["pyjson5"]
    commentjson = ["commentjson"]

[tool.pyright]
    typeCheckingMode = "basic"
    venvPath         = "."
    venv             = ".venv"

[tool.ruff]
    ignore  = ["E501"]

[build-system]
    requires      = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
